Update, remove and fix